--- a/lib/style.css
+++ b/lib/style.css
@@ -1,7 +1,13 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 document-container {
   display: block;
   min-height: 100vh;
   min-width: 100vw;
   box-sizing: border-box;
   outline: none;
+  padding: 10px;
 }
